# pvsneslib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ProjectHome.md  TODO.md  azure-pipelines.yml  build_linux.sh  build_mac.sh  build_win.ps1  build_win.sh  cmake_generate.sh  readme.md
tools/: 816-opt.py  CMakeLists.txt
tools/bass/: CMakeLists.txt
tools/bass/bass/: bass.cpp
tools/bass/bass/architecture/: architecture.cpp  architecture.h
tools/bass/bass/architecture/table/: table.cpp  table.h
tools/bass/bass/core/: core.cpp  core.h  core.hpp
tools/bass/nall/: algorithm.hpp  any.hpp  arithmetic.hpp  array.hpp  atoi.hpp  bit-vector.hpp  bit.hpp  chrono.hpp  directory.hpp  dl.hpp  endian.hpp  file.hpp  filemap.hpp  function.hpp  image.hpp  inode.hpp  main.hpp  map.hpp  memory.hpp  nall.hpp  path.hpp  platform.hpp  primitives.hpp  random.hpp  run.hpp  serial.hpp  serializer.hpp  service.hpp  set.hpp  shared-memory.hpp  shared-pointer.hpp  smtp.hpp  sort.hpp  string.hpp  thread.hpp  varint.hpp  vector.hpp  vfs.hpp
tools/bass/nall/beat/: archive.hpp  delta.hpp  linear.hpp  metadata.hpp  multi.hpp  patch.hpp
tools/bass/nall/cipher/: chacha20.hpp
tools/bass/nall/database/: odbc.hpp  sqlite3.hpp
tools/bass/nall/decode/: base57.hpp  gzip.hpp  png.hpp  zip.hpp
tools/bass/nall/dsp/resampler/: cubic.hpp
tools/bass/nall/elliptic-curve/: curve25519.hpp  ed25519.hpp  modulo25519-reference.hpp  modulo25519.hpp
tools/bass/nall/emulation/: 21fx.hpp
tools/bass/nall/encode/: base57.hpp  zip.hpp
tools/bass/nall/hash/: crc16.hpp  crc32.hpp  crc64.hpp  hash.hpp  sha224.hpp  sha256.hpp  sha384.hpp  sha512.hpp
tools/bass/nall/http/: client.hpp  request.hpp  response.hpp  role.hpp  server.hpp
tools/bass/nall/mac/: poly1305.hpp
tools/bass/nall/string/: core.hpp
tools/bass/nall/string/markup/: bml.hpp  node.hpp  xml.hpp
tools/bass/nall/string/transform/: cml.hpp  dml.hpp
tools/bass/nall/vfs/: vfs.hpp
tools/bass/nall/vfs/fs/: file.hpp
tools/bass/nall/windows/: detour.hpp  guid.hpp  registry.hpp  utf8.hpp
tools/bass/nall/xorg/: clipboard.hpp  xorg.hpp
tools/bin2h/: CMakeLists.txt  bin2h.c
tools/bin2txt/: CMakeLists.txt  bin2txt.c
tools/constify/: CMakeLists.txt  constify.cpp
tools/gfx2snes/: CMakeLists.txt  gfx2snes.c  gfx2snes.h  lodepng.c  lodepng.h  lzss.c
tools/smconv/: CMakeLists.txt  brr.cpp  conversion.cpp  conversion.h  convert.cpp  inputdata.cpp  inputdata.h  io.cpp  io.h  it2spc.cpp  it2spc.h  itloader.cpp  itloader.h  spc_program.h
tools/snestools/: CMakeLists.txt  snestools.c
tools/stripcom/: CMakeLists.txt  stripcom.c
