cmake_minimum_required(VERSION 3.9.2)
# target_compile_features(bass PUBLIC cxx_std_14)
add_subdirectory(bass)
add_subdirectory(bin2h)
add_subdirectory(bin2txt)
add_subdirectory(constify)
add_subdirectory(gfx2snes)
add_subdirectory(smconv)
add_subdirectory(snestools)
# add_subdirectory(snes-sdk/tcc-65816)
# keep as last - overrides CMake globals for compilation
add_subdirectory(wla-dx)
